# stm32mp135-bare-metal-demo

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  boot.S  boot.cpp  build.bat  linker.ld  main.cpp  requirements-flash.txt  startup.cpp
cmake/: arm-none-eabi-toolchain.cmake
docs/: debugging.md
openocd/: stlink-v2.cfg  stm32mp13x.cfg
scripts/: flash.ps1  flash.sh  stm32flash.py
